--- a/A Friend Server Java/AFriendServer/pom.xml
+++ b/A Friend Server Java/AFriendServer/pom.xml
@@ -7,9 +7,19 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>commons-dbutils</groupId>
             <artifactId>commons-dbutils</artifactId>
             <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.12.RELEASE</version>
         </dependency>
     </dependencies>
     <properties>
