--- a/A Friend Server Java/.vscode/settings.json
+++ b/A Friend Server Java/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "java.dependency.packagePresentation": "flat",
+    "java.dependency.packagePresentation": "hierarchical",
     "java.configuration.updateBuildConfiguration": "automatic"
 }
