--- a/A Friend Java/AFriendJava/pom.xml
+++ b/A Friend Java/AFriendJava/pom.xml
@@ -10,4 +10,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+
+    <dependencies>
+
+
+    </dependencies>
 </project>
