--- a/A Friend Java/AFriendJava/pom.xml
+++ b/A Friend Java/AFriendJava/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>AFriendJava</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.jwebmp.plugins.iconsets</groupId>
+            <artifactId>jwebmp-material-icons</artifactId>
+            <version>1.0.17.0</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
