--- a/A Friend Java/AFriendJava/pom.xml
+++ b/A Friend Java/AFriendJava/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
     </dependencies>
 </project>
