--- a/A Friend Java/AFriendJava/pom.xml
+++ b/A Friend Java/AFriendJava/pom.xml
@@ -6,6 +6,25 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
+
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-ideutil</artifactId>
+            <version>11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <version>11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-core</artifactId>
+            <version>11.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.jwebmp.plugins.iconsets</groupId>
             <artifactId>jwebmp-material-icons</artifactId>
