--- a/A Friend Server Java/AFriendServer/.settings/org.eclipse.jdt.core.prefs
+++ b/A Friend Server Java/AFriendServer/.settings/org.eclipse.jdt.core.prefs
@@ -24,5 +24,5 @@ org.eclipse.jdt.core.compiler.problem.potentialNullReference=warning
 org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures=warning
 org.eclipse.jdt.core.compiler.problem.syntacticNullAnalysisForFields=enabled
 org.eclipse.jdt.core.compiler.processAnnotations=disabled
-org.eclipse.jdt.core.compiler.release=disabled
+org.eclipse.jdt.core.compiler.release=enabled
 org.eclipse.jdt.core.compiler.source=17
